Changes to the main menu and startup. Added ability to pick up the server you were last on. Also added more error handling on the network side.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,10 +7,23 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
     <string name="error_ping_offline">Sorry, that server is offline. Ask the server owner to start it, or try again later.</string>
-    <string name="error_resume_ping_offline">Sorry, the last server you used is currently offline.</string>
+    <string name="error_resume_ping_offline">Sorry, the last server you were using is currently offline. You will need to choose a different server.</string>
 
     <string name="login_welcome">Welcome!</string>
     <string name="login_description">To get started with ArkWebMap, you\'ll need to sign in with Steam to access your Ark servers and tribes.</string>
+
+    <string name="error_net_btn">Ok</string>
+    <string name="error_net_connect_title">Offline</string>
+    <string name="error_net_connect_sub">You are offline. Try again later.</string>
+    <string name="error_net_521_title">Server Offline</string>
+    <string name="error_net_521_sub">Sorry, the server you were using went offline. Try again later, or pick a different server.</string>
+    <string name="error_net_503_title">Service Unavailable</string>
+    <string name="error_net_503_sub">Sorry, system is currently down for maintenance. Try again later.</string>
+    <string name="error_net_status_title">Unexpected Network Error</string>
+    <string name="error_net_status_sub">An unexpected network error occurred. Try again later.</string>
+    <string name="error_net_unexpected_title">Unexpected Server Error</string>
+    <string name="error_net_unexpected_sub">The server returned an unexpected response that could not be read. Try again later.</string>
+    <string name="error_net_server_error_title">Server Error</string>
 
     <string name="mainmenu_tribe">Tribe</string>
     <string name="mainmenu_tribe_map">Map</string>
